...
                            fontWeight = FontWeight.Black
                        )
                    },
                    navigationIcon = {
                        IconButton(
                            onClick = { onBackClickHandler.invoke() },
                            modifier = Modifier.testTag("back_button_test_tag")
                        ) {
                            Icon(
                                imageVector = Icons.Filled.ArrowBack,
                                contentDescription = null
                            )
                        }
                    },
                    actions = {
                        IconButton(
                            onClick = { vm.sendAction(DetailsAction.ActionFavoritesButtonPressed) },
                            modifier = Modifier.testTag("add_to_favorites_icon_test_tag")

                        ) {
                            val icon = if (uiState.isInFavorites) {
                                Icons.Filled.Favorite
                            } else {
                                Icons.Filled.FavoriteBorder
...
