...
            top = contentPaddings.calculateTopPadding() + 16.dp ,
            end = 16.dp,
            bottom = contentPaddings.calculateBottomPadding() + 16.dp
        ),
        modifier = Modifier
            .fillMaxHeight()
            .testTag("news_list_test_tag")
    ) {
        items(
            items = uiState.articles,
            key = { it.id }
        ) {articleUiModel: ArticleUiModel ->
            ArticlePortrait(
...
