...
    LazyColumn(
        state = lazyListState,
        verticalArrangement = Arrangement.spacedBy(16.dp),
        contentPadding = PaddingValues(all = 16.dp),
        modifier = Modifier
            .fillMaxHeight()
            .testTag("favorites_list_test_tag")
    ) {
        items(
            items = uiState.favoritesArticles,
            key = { it.id }
        ) {
            FavoritesArticlePortrait(
...
